// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`init — generated project snapshots > snapshots a fresh Cloudflare App Router init 1`] = `
"--- .gitignore ---
/dist/
.vinext/

--- app/layout.tsx ---
export default function Layout({ children }) { return <html><body>{children}</body></html> }

--- app/page.tsx ---
export default function Home() { return <div>hi</div> }

--- package.json ---
{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {
    "react": "^19.0.0",
    "react-dom": "^19.0.0",
    "next": "^15.0.0"
  },
  "type": "module",
  "scripts": {
    "dev:vinext": "vinext dev --port 3001",
    "build:vinext": "vinext build",
    "start:vinext": "vinext start"
  }
}

--- vite.config.ts ---
import { defineConfig } from "vite";
import vinext from "vinext";
import { cloudflare } from "@cloudflare/vite-plugin";
import { kvDataAdapter } from "@vinext/cloudflare/cache/kv-data-adapter";
import { cdnAdapter } from "@vinext/cloudflare/cache/cdn-adapter";

export default defineConfig({
  plugins: [
    vinext({
        cache: {
          data: kvDataAdapter(),
          cdn: cdnAdapter(),
        },
      }),
    cloudflare({
      viteEnvironment: {
        name: "rsc",
        childEnvironments: ["ssr"],
      },
    }),
  ],
});

--- worker/index.ts ---
/**
 * Cloudflare Worker entry point — auto-generated by vinext.
 * Edit freely or delete to regenerate with vinext init.
 *
 * Cache backends (data + page ISR) are configured declaratively in
 * vite.config via the vinext({ cache }) option.
 *
 * For apps without image optimization, you can use vinext/server/app-router-entry
 * directly in wrangler.jsonc: "main": "vinext/server/app-router-entry"
 */
import { handleImageOptimization, DEFAULT_DEVICE_SIZES, DEFAULT_IMAGE_SIZES, isImageOptimizationPath } from "vinext/server/image-optimization";
import type { ImageConfig } from "vinext/server/image-optimization";
import handler from "vinext/server/app-router-entry";

const imageConfig: ImageConfig = {
  deviceSizes: JSON.parse(
    process.env.__VINEXT_IMAGE_DEVICE_SIZES ?? JSON.stringify(DEFAULT_DEVICE_SIZES),
  ),
  imageSizes: JSON.parse(
    process.env.__VINEXT_IMAGE_SIZES ?? JSON.stringify(DEFAULT_IMAGE_SIZES),
  ),
  qualities: JSON.parse(process.env.__VINEXT_IMAGE_QUALITIES ?? "null") ?? undefined,
  dangerouslyAllowSVG: process.env.__VINEXT_IMAGE_DANGEROUSLY_ALLOW_SVG === "true",
};

interface Env {
  ASSETS: Fetcher;
  IMAGES: {
    input(stream: ReadableStream): {
      transform(options: Record<string, unknown>): {
        output(options: { format: string; quality: number }): Promise<{ response(): Response }>;
      };
    };
  };
}

interface ExecutionContext {
  waitUntil(promise: Promise<unknown>): void;
  passThroughOnException(): void;
}

// Image security config. SVG sources with .svg extension auto-skip the
// optimization endpoint on the client side (served directly, no proxy).
// To route SVGs through the optimizer (with security headers), set
// dangerouslyAllowSVG: true in next.config.js and uncomment below:
// const imageConfig: ImageConfig = { dangerouslyAllowSVG: true };

export default {
  async fetch(request: Request, env: Env, ctx: ExecutionContext): Promise<Response> {
    const url = new URL(request.url);

    // Image optimization via Cloudflare Images binding.
    // The parseImageParams validation inside handleImageOptimization
    // normalizes backslashes and validates the origin hasn't changed.
    if (isImageOptimizationPath(url.pathname)) {
      const allowedWidths = [
        ...(imageConfig.deviceSizes ?? DEFAULT_DEVICE_SIZES),
        ...(imageConfig.imageSizes ?? DEFAULT_IMAGE_SIZES),
      ];
      return handleImageOptimization(request, {
        fetchAsset: (path) => env.ASSETS.fetch(new Request(new URL(path, request.url))),
        transformImage: async (body, { width, format, quality }) => {
          const result = await env.IMAGES.input(body).transform(width > 0 ? { width } : {}).output({ format, quality });
          return result.response();
        },
      }, allowedWidths, imageConfig);
    }

    // Delegate everything else to vinext, forwarding ctx so that
    // ctx.waitUntil() is available to background cache writes and
    // other deferred work via getRequestExecutionContext().
    return handler.fetch(request, env, ctx);
  },
};

--- wrangler.jsonc ---
{
  "$schema": "node_modules/wrangler/config-schema.json",
  "name": "test-project",
  "compatibility_date": "2026-06-23",
  "compatibility_flags": [
    "nodejs_compat"
  ],
  "main": "./worker/index.ts",
  "assets": {
    "directory": "dist/client",
    "not_found_handling": "none",
    "binding": "ASSETS"
  },
  "images": {
    "binding": "IMAGES"
  },
  "kv_namespaces": [
    {
      "binding": "VINEXT_KV_CACHE",
      "id": "<your-kv-namespace-id>"
    }
  ]
}"
`;

exports[`init — generated project snapshots > snapshots a fresh Node Pages Router init 1`] = `
"--- .gitignore ---
/dist/
.vinext/

--- package.json ---
{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {
    "react": "^19.0.0",
    "react-dom": "^19.0.0",
    "next": "^15.0.0"
  },
  "type": "module",
  "scripts": {
    "dev:vinext": "vinext dev --port 3001",
    "build:vinext": "vinext build",
    "start:vinext": "vinext start"
  }
}

--- pages/index.tsx ---
export default function Home() { return <div>hi</div> }

--- vite.config.ts ---
import vinext from "vinext";
import { defineConfig } from "vite";

export default defineConfig({
  plugins: [vinext()],
});"
`;

exports[`init — generated project snapshots > snapshots an AST update to an existing Vite config 1`] = `
"--- .gitignore ---
/dist/
.vinext/

--- app/layout.tsx ---
export default function Layout({ children }) { return <html><body>{children}</body></html> }

--- app/page.tsx ---
export default function Home() { return <div>hi</div> }

--- package.json ---
{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {
    "react": "^19.0.0",
    "react-dom": "^19.0.0",
    "next": "^15.0.0"
  },
  "type": "module",
  "scripts": {
    "dev:vinext": "vinext dev --port 3001",
    "build:vinext": "vinext build",
    "start:vinext": "vinext start"
  }
}

--- vite.config.ts ---
import { defineConfig } from "vite";
import vinext from "vinext";
import custom from "./custom.js";
import { kvDataAdapter } from "@vinext/cloudflare/cache/kv-data-adapter";
import { cdnAdapter } from "@vinext/cloudflare/cache/cdn-adapter";
import { cloudflare } from "@cloudflare/vite-plugin";

export default defineConfig({
  plugins: [custom(), vinext({ cache: { data: kvDataAdapter(), cdn: cdnAdapter() } }),
    cloudflare({
      viteEnvironment: {
        name: "rsc",
        childEnvironments: ["ssr"],
      },
    }),
  ],
  server: { port: 4321 },
});

--- worker/index.ts ---
/**
 * Cloudflare Worker entry point — auto-generated by vinext.
 * Edit freely or delete to regenerate with vinext init.
 *
 * Cache backends (data + page ISR) are configured declaratively in
 * vite.config via the vinext({ cache }) option.
 *
 * For apps without image optimization, you can use vinext/server/app-router-entry
 * directly in wrangler.jsonc: "main": "vinext/server/app-router-entry"
 */
import { handleImageOptimization, DEFAULT_DEVICE_SIZES, DEFAULT_IMAGE_SIZES, isImageOptimizationPath } from "vinext/server/image-optimization";
import type { ImageConfig } from "vinext/server/image-optimization";
import handler from "vinext/server/app-router-entry";

const imageConfig: ImageConfig = {
  deviceSizes: JSON.parse(
    process.env.__VINEXT_IMAGE_DEVICE_SIZES ?? JSON.stringify(DEFAULT_DEVICE_SIZES),
  ),
  imageSizes: JSON.parse(
    process.env.__VINEXT_IMAGE_SIZES ?? JSON.stringify(DEFAULT_IMAGE_SIZES),
  ),
  qualities: JSON.parse(process.env.__VINEXT_IMAGE_QUALITIES ?? "null") ?? undefined,
  dangerouslyAllowSVG: process.env.__VINEXT_IMAGE_DANGEROUSLY_ALLOW_SVG === "true",
};

interface Env {
  ASSETS: Fetcher;
  IMAGES: {
    input(stream: ReadableStream): {
      transform(options: Record<string, unknown>): {
        output(options: { format: string; quality: number }): Promise<{ response(): Response }>;
      };
    };
  };
}

interface ExecutionContext {
  waitUntil(promise: Promise<unknown>): void;
  passThroughOnException(): void;
}

// Image security config. SVG sources with .svg extension auto-skip the
// optimization endpoint on the client side (served directly, no proxy).
// To route SVGs through the optimizer (with security headers), set
// dangerouslyAllowSVG: true in next.config.js and uncomment below:
// const imageConfig: ImageConfig = { dangerouslyAllowSVG: true };

export default {
  async fetch(request: Request, env: Env, ctx: ExecutionContext): Promise<Response> {
    const url = new URL(request.url);

    // Image optimization via Cloudflare Images binding.
    // The parseImageParams validation inside handleImageOptimization
    // normalizes backslashes and validates the origin hasn't changed.
    if (isImageOptimizationPath(url.pathname)) {
      const allowedWidths = [
        ...(imageConfig.deviceSizes ?? DEFAULT_DEVICE_SIZES),
        ...(imageConfig.imageSizes ?? DEFAULT_IMAGE_SIZES),
      ];
      return handleImageOptimization(request, {
        fetchAsset: (path) => env.ASSETS.fetch(new Request(new URL(path, request.url))),
        transformImage: async (body, { width, format, quality }) => {
          const result = await env.IMAGES.input(body).transform(width > 0 ? { width } : {}).output({ format, quality });
          return result.response();
        },
      }, allowedWidths, imageConfig);
    }

    // Delegate everything else to vinext, forwarding ctx so that
    // ctx.waitUntil() is available to background cache writes and
    // other deferred work via getRequestExecutionContext().
    return handler.fetch(request, env, ctx);
  },
};

--- wrangler.jsonc ---
{
  "$schema": "node_modules/wrangler/config-schema.json",
  "name": "test-project",
  "compatibility_date": "2026-06-23",
  "compatibility_flags": [
    "nodejs_compat"
  ],
  "main": "./worker/index.ts",
  "assets": {
    "directory": "dist/client",
    "not_found_handling": "none",
    "binding": "ASSETS"
  },
  "images": {
    "binding": "IMAGES"
  },
  "kv_namespaces": [
    {
      "binding": "VINEXT_KV_CACHE",
      "id": "<your-kv-namespace-id>"
    }
  ]
}"
`;
